# simple2fa

./: Cargo.toml  Justfile  README.md
benches/: bench.rs
node/: Justfile  README.md  foo.js  index.d.ts  package.json
node/script/: bench.js  include.js
node/src/: lib.rs
python/: Cargo.toml  Justfile  README.md  bench.py  simple2fa.pyi
python/src/: lib.rs
simple2fa_node/: Cargo.toml  Justfile  README.md  package-lock.json  package.json
src/: lib.rs
