[package]
name = "simple2fa"
version = "0.1.0"
edition = "2021"
license = "MIT"
description="Simple2FA is a library to easily add two-factor authentication to your app."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base32 = "0.4.0"
base64 = "0.13.0"
digest = "0.9.0"
hmac = "0.11.0"
image = "0.23.14"
qrcode = { version = "0.12.0", features = ["image"] }
rand = "0.8.4"
totp-lite = "1.0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
